# quotes_api

./: .env  Cargo.toml  Development.json  Development.toml  README.md  config.json  config.toml
src/: main.rs
src/app/: apidoc.rs  handlers.rs  mod.rs  quote_handlers.rs  routes.rs
src/config/: mod.rs
src/models/: create_quote.rs  mod.rs  quote.rs  response.rs
