[package]
name = "quotes_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
actix-web = "4.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dotenv = "0.15.0"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.77"
warp = "0.2"
config = "0.10"
lazy_static = "1.4"
actix-cors = "0.6.4"

# SWAGGER SECIFIC DEPENDENCIES
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }